[package]
name = "cxl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
ioctl-sys = "0.8.0"
log = "0.4"
rand = "0.8"
rand_xoshiro = "0.6.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
bindgen = "0.66"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
